--- a/packages.config
+++ b/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.6.10" targetFramework="net40" />
+  <package id="jQuery" version="3.3.1" targetFramework="net40" />
 </packages>
